--- a/OEVApp/i18n/String_En.xml
+++ b/OEVApp/i18n/String_En.xml
@@ -98,6 +98,8 @@
     <actividadRequerida>At least one activity is mandatory</actividadRequerida>
     <fechaInvalida>Dates are not valid. Start date must be later than 10 days from the current date.</fechaInvalida>
   <destinoRequerido>At least one destination is mandatory</destinoRequerido>
+
+ <calendarioExistente>Calendar for year {0} already exists</calendarioExistente>
 </Mensaje>
   
   <InicioAdministrador>
