Agregado de iconos al menu Director

--- a/OEVApp/i18n/String_En.xml
+++ b/OEVApp/i18n/String_En.xml
@@ -163,7 +163,7 @@
     <inicioDirectorForm>OEV - Director</inicioDirectorForm>
     <calendario>Calendar</calendario>
     <actividad>Activity</actividad>
-    <cursoEntrenamiento>Training course</cursoEntrenamiento>
+    <cursoEntrenamiento>Course</cursoEntrenamiento>
     <paqueteEvento>Package - Event</paqueteEvento>
     <modalidad>Type</modalidad>
     <destino>Destination</destino>
