--- a/OEVApp/i18n/String_Es.xml
+++ b/OEVApp/i18n/String_Es.xml
@@ -163,7 +163,7 @@
     <inicioDirectorForm>OEV - Director</inicioDirectorForm>
     <calendario>Calendario</calendario>
     <actividad>Actividad</actividad>
-    <cursoEntrenamiento>Curso de entrenamiento</cursoEntrenamiento>
+    <cursoEntrenamiento>Curso</cursoEntrenamiento>
     <paquete>Paquete</paquete>
     <modalidad>Modalidad</modalidad>
     <destino>Destino</destino>
