--- a/OEVApp/Properties/Resources.resx
+++ b/OEVApp/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="traslado36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\traslado36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Backup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Backup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,6 +154,9 @@
   <data name="DigitoControl" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DigitoControl.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BlueBackstageBgImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BlueBackstageBgImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -168,6 +174,9 @@
   </data>
   <data name="DatabaseRestore24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DatabaseRestore24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="instructor36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\instructor36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="addedit24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\addedit24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,14 +217,20 @@
   <data name="ConfigCool24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ConfigCool24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="OEV" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\OEV.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="calendar36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calendar36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Open32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Open32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Open" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Cripto36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Cripto36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hotel36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hotel36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Save16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -247,11 +262,14 @@
   <data name="candadoAbierto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\candadoAbierto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dbsetup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dbsetup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Encriptar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Encriptar1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Cripto36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Cripto36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="OEV" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OEV.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Encriptar11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Encriptar1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -259,13 +277,13 @@
   <data name="icon-16-logout" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon-16-logout.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dbsetup" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dbsetup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="actividad36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actividad36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Share" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Share.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="reporte36x36" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reporte36x36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
